# paper_scraping

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01_etl.ipynb  02_aggregation.ipynb  2023_kdd.ipynb  2023_recsys.ipynb  2023_sigir.ipynb
