[tool.poetry]
name = "paper_scraping"
version = "0.1.0"
description = ""
authors = ["kenchin110100 <11845307+kenchin110100@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.5.3"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
tqdm = "^4.66.1"
polars = "^0.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
